--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           # This works like this: when the platform is "arduino:samd", the
           # variable `fqbn` is set to "arduino:samd:nano_33_iot".
           - arduino-platform: "arduboy-homemade:avr"
-            fqbn: "arduboy-homemade:avr:arduboy-homemade:based_on=leonardo,boot=cathy3k,core=arduino-core"
+            fqbn: ""
 
     # This is the platform GitHub will use to run our workflow, we
     # pick Windows for no particular reason.
@@ -52,7 +52,7 @@ jobs:
       - name: Install platform
         run: |
           arduino-cli core update-index --additional-urls https://raw.githubusercontent.com/MrBlinky/Arduboy-homemade-package/master/package_arduboy_homemade_index.json
-          arduino-cli core install ${{ matrix.arduino-platform }}
+          arduino-cli core install arduboy-homemade:avr
       
       # install arduboy libraries used 
       - name: Install Additional libraries
@@ -64,7 +64,7 @@ jobs:
       # Finally, we compile the sketch, using the FQBN that was set
       # in the build matrix.
       - name: Compile Sketch
-        run: arduino-cli compile -e --fqbn=${{ matrix.fqbn }} .\ArduRacerFx.ino
+        run: arduino-cli compile -e --fqbn=arduboy-homemade:avr:arduboy-homemade:based_on=leonardo,boot=cathy3k,core=arduino-core .\ArduRacerFx.ino
     
       #prepare artificat folder 
       - name: prepare artifact
