--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,3 +84,10 @@ jobs:
           name: ArduRacerFx
           path: release/
           # retention-days: 30
+
+      # Create a release
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: release/ArduRacerFx
