--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: release/ArduRacerFx
+          files: ArduRacerFx
