--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        id: download
+        with:
+          name: 'ArduRacerFx'
+      - name: 'Echo download path'
+        run: echo ${{steps.download.outputs.download-path}}
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ArduRacerFx
+          files: ${{steps.download.outputs.download-path}}
