--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,7 @@ jobs:
         id: download
         with:
           name: 'ArduRacerFx'
-      - name: 'Echo download path'
-        run: echo ${{steps.download.outputs.download-path}}
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ${{steps.download.outputs.download-path}}
+          files: ArduRacerFx
