--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
+        if: startsWith(github.ref, 'refs/tags/')
         id: download
         with:
           name: 'ArduRacerFx'
