--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,13 +14,15 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
+        name: Download Artifacts
         if: startsWith(github.ref, 'refs/tags/')
         id: download
         with:
-          name: 'ArduRacerFx'
-          path: /artifacts
-      - name: Release
+          path: artifacts
+      - name: Display structure of downloaded files
+        run: ls -R artifacts          
+      - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: /artifacts
+          files: artifacts
