--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,3 +84,16 @@ jobs:
           name: ArduRacerFx
           path: release/
           # retention-days: 30
+
+      # Download and release artifact, if tagged build
+      - uses: actions/download-artifact@v3
+        name: Download Artifacts
+        if: startsWith(github.ref, 'refs/tags/')
+        id: download
+        with:
+          path: artifacts
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: artifacts
